[tool.poetry]
name = "name_conversions"
version = "0.1.0"
description = "convert between species naming conventions"
authors = [
  "Sam Lapp <sammlapp@gmail.com>",
  "Tessa Rhinehart <tessa.rhinehart@gmail.com>",
  "Justin Kitzes <justin.kitzes@pitt.edu>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jkitzes/name_conversions"
packages = [{include = "name_conversions"}]
include = ["name_conversions/**/*.py"]

[tool.poetry.dependencies]
python = ">=3.8"
pandas = ">=1.3"
numpy = ">=1.0"

[tool.poetry.dev-dependencies]
black = "~=22.8"
pre-commit = ">=1.18"
sphinx = ">=2.1"
pytest = ">=5.1"
sphinx-rtd-theme = ">=0.4.3"
recommonmark = ">=0.6.0"
nbsphinx = ">=0.7.1"
m2r = ">=0.2"
docutils = "=0.17"

[tool.black]
line-length = 88
target_version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | dist
)/
'''


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
